--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
 
       - name: Build VitePress
         run: npm run docs:build
+        env:
+          # 显式传入 base，确保构建出的链接带 /fe-baiyu/ 前缀
+          VITEPRESS_BASE: /${{ github.event.repository.name }}/
 
       - name: Disable Jekyll
         run: touch docs/.vitepress/dist/.nojekyll
